removed unuseful actions